[package]
name = "qt_atoms"
version = "0.1.0"
authors = ["Kartik Aiyer <kartik.aiyer@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Parses the QTFF file format (quick time file format)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.2"